# doublebuf

./: CMakeLists.txt  README.md
include/doublebuf/: double_buffer_atomic.hpp
test/: CMakeLists.txt  conanfile.py
test/source/: main.cpp
